# G_ALGO

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml
.github/workflows/: ccpp.yml
azure-devops/: liunx.yml
chapter1/Problem01/: CMakeLists.txt
src/chapter1/Problem01/: CMakeLists.txt
src/chapter1/problem1/: CMakeLists.txt  main.cpp
src/chapter1/problem10/: CMakeLists.txt  main.cpp
src/chapter1/problem11/: CMakeLists.txt  main.cpp
src/chapter1/problem2/: CMakeLists.txt
src/chapter1/problem21/: main.cpp
src/chapter1/problem3/: main.cpp
src/chapter1/problem4/: main.cpp
src/chapter1/problem5/: main.cpp
src/chapter1/problem6/: CMakeLists.txt  main.cpp
src/chapter1/problem7/: CMakeLists.txt  main.cpp
src/chapter1/problem8/: CMakeLists.txt  main.cpp
src/chapter1/problem9/: CMakeLists.txt  main.cpp
src/chapter2/problem1/: CMakeLists.txt  main.cpp
src/chapter2/problem10/: CMakeLists.txt  main.cpp
src/chapter2/problem2/: CMakeLists.txt  main.cpp
src/chapter2/problem3/: CMakeLists.txt  main.cpp
src/chapter2/problem4/: CMakeLists.txt  main.cpp
src/chapter2/problem5/: CMakeLists.txt  main.cpp
src/chapter2/problem6/: CMakeLists.txt  main.cpp
src/chapter2/problem7/: CMakeLists.txt  main.cpp
src/chapter2/problem8/: CMakeLists.txt  main.cpp
src/chapter2/problem9/: CMakeLists.txt  main.cpp
src/chapter3/problem1/: CMakeLists.txt  main.cpp
src/chapter3/problem2/: CMakeLists.txt  main.cpp
src/chapter3/problem3/: CMakeLists.txt  main.cpp
src/chapter3/problem4/: CMakeLists.txt  main.cpp
src/chapter3/problem5/: CMakeLists.txt  main.cpp
src/chapter3/problem6/: CMakeLists.txt
src/chapter3/problem7/: CMakeLists.txt  main.cpp
src/chapter3/problem8/: CMakeLists.txt  (+1 more)
tests/: CmakeLists.txt
(+89 files in other folders)
